Add more spring security/thymeleaf integration/features